crates/ty_python_semantic/resources/mdtest/snapshots/1._invalid_argument_typ…_-_2._Invalid_argument_typ…_-_10._Tests_for_a_variety_…_-_17._Synthetic_arguments.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. invalid_argument_typ… - 2. Invalid argument typ… - 10. Tests for a variety … - 17. Synthetic arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C:
2 |     def __call__(self, x: int) -> int:
3 |         return 1
4 | 
5 | c = C()
6 | c("wrong")  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to bound method `__call__` is incorrect
 --> src/mdtest_snippet.py:6:3
  |
5 | c = C()
6 | c("wrong")  # error: [invalid-argument-type]
  |   ^^^^^^^ Expected `int`, found `Literal["wrong"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:2:9
  |
1 | class C:
2 |     def __call__(self, x: int) -> int:
  |         ^^^^^^^^       ------ Parameter declared here
3 |         return 1
  |
info: rule `invalid-argument-type` is enabled by default

```
