crates/ty_python_semantic/resources/mdtest/snapshots/1._invalid_argument_typ…_-_2._Invalid_argument_typ…_-_3._Basic.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. invalid_argument_typ… - 2. Invalid argument typ… - 3. Basic
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(x: int) -> int:
2 |     return x * x
3 | 
4 | foo("hello")  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:4:5
  |
2 |     return x * x
3 |
4 | foo("hello")  # error: [invalid-argument-type]
  |     ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(x: int) -> int:
  |     ^^^ ------ Parameter declared here
2 |     return x * x
  |
info: rule `invalid-argument-type` is enabled by default

```
